# ParaLab

./: README.md  fact.cpp  fib.cpp
CUDA/matrix-multiplication/: kernel.cu  kernel_update_2.cu  kernel_update_3.cu  kernel_update_4.cu
CUDA/reduction-strategies/: parallel-reduction-1.cu  parallel-reduction-2(zero-bank-conflicts).cu  reduction_1.cu
CUDA/vector-addition/: kernel.cu
OpenMP/factorial/recursive/: fact.cpp
OpenMP/fibonacci/: fibonacci.sln
OpenMP/fibonacci/fibonacci/: fib.cpp
OpenMP/hello-world/hello-world/: hello-world.cpp  hello-world.vcxproj
OpenMP/histogram/: histogram.cpp
OpenMP/matrix-addition/: mat_add.c
OpenMP/parallel-lab/: parallel-lab.sln
OpenMP/parallel-lab/parallel-lab/: parallel-lab.vcxproj  parallel-lab.vcxproj.filters
OpenMP/pi-number/: a.out
OpenMP/pi-number/pi-number/: ReadMe.txt  a.out  pi_number_reduction.cpp
OpenMP/prefix-sum/imp-1/: prefix1.cpp
factorial/: fact.cpp
factorial/iterative/: fact.cpp
fibonacci/fibonacci/: fib.cpp  fibonacci.vcxproj
hello-world/: hello-world.sln
hello-world/hello-world/: hello-world.cpp  hello-world.vcxproj
matrix-addition/: mat_add.c
matrix-multiplication/: matmul.c
merge-sort/: mergesort.cpp
parallel-lab/parallel-lab/: ReadMe.txt  parallel-lab.cpp  stdafx.cpp
pi-number/: CMakeLists.txt  pi-number.sln  pi_parallel2.c  pi_parallel2.cpp
pi-number/pi-number/: a.out  pi-number.cpp  pi-number.vcxproj  pi-number.vcxproj.filters  pi_number_reduction.c  pi_number_reduction.cpp  pi_parallel.c  pi_parallel.cpp  stdafx.cpp
prefix-sum/imp-1/: prefix1.cpp
(+3 files in other folders)
